--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prisma-psm/pg",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Prisma Safe Migration Postgres Driver",
   "main": "src/index.js",
   "scripts": {
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma-psm/core": "^1.0.2",
     "pg": "^8.16.3",
     "yaml": "^2.8.1"
   },
@@ -17,6 +16,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@prisma-psm/core": "file:../psm",
     "@types/pg": "^8.15.5"
   }
 }
